ux(carbon): Remove z-index whitespace fix (so bg doesn't hide donut/pie)

--- a/packages/chart-react-carbon/src/chart-react-carbon.css
+++ b/packages/chart-react-carbon/src/chart-react-carbon.css
@@ -10,8 +10,3 @@
     justify-self: center;
   }
 }
-
-.chartRow.carbon .chartRow--donut .chart-holder {
-  /* Prevent white space from overlapping with stuff above */
-  z-index: -10;
-}
